
VERSION 0.6.4cvs
================

2005-02-05  Vincent Richard  <vincent@vincent-richard.net>

 * utility/md5.cpp: fixed forward use of swapUint32Array() with
   gcc 3.3 (Apple).

2005-02-01  Vincent Richard  <vincent@vincent-richard.net>

 * text.cpp: fixed possible segfault when encoding is Base64 (typo).

2005-01-28  Vincent Richard  <vincent@vincent-richard.net>

 * Started version 0.6.4.


VERSION 0.6.3
=============

2005-01-28  Vincent Richard  <vincent@vincent-richard.net>

 * Splitted 'contentHandler' into three classes: 'emptyContentHandler',
   'stringContentHandler' and 'streamContentHandler'.

 * Fixed bugs with signed/unsigned char in 'parserHelpers'.

2005-01-15  Vincent Richard  <vincent@vincent-richard.net>

 * Fixed missing 'vmime/config.hpp' include when installing VMime
   using 'make install'.

2005-01-13  Vincent Richard  <vincent@vincent-richard.net>

 * messaging/events.*: prefixed function names with 'get' + written
   some documentation for functions.

2005-01-05  Vincent Richard  <vincent@vincent-richard.net>

 * Started version 0.6.3.


VERSION 0.6.2
=============

2005-01-04  Vincent Richard  <vincent@vincent-richard.net>

 * Added diagnostic error string for 'exceptions::connection_error'.

 * Fixed a bug in 'posixSocket::connect()' that prevented connecting to
   servers by specifying an IP address instead of a server name.

2005-01-03  Vincent Richard  <vincent@vincent-richard.net>

 * Fixed linking error on 'typeAdapter <string>::parse()' with g++ versions
   older than 3.3.

2005-01-02  Vincent Richard  <vincent@vincent-richard.net>

 * Added unit tests for utility::path and bodyPart.

 * Added 'utility::datetimeUtils' to provide some time-related functions.

 * Fixed 'stringUtils' not in namespace 'utility'.

 * Moved 'datetime::getDayOfWeek()' to 'datetimeUtils'.

2005-01-01  Vincent Richard  <vincent@vincent-richard.net>

 * Converted all C-style casts to C++-style casts.
