@@ -4,6 +4,11 @@ VERSION 0.6.4cvs
 
 2005-02-05  Vincent Richard  <vincent@vincent-richard.net>
 
+ * platforms/posix/posixHandler.cpp: removed extra '::' before
+   numeric constants.
+
+2005-02-05  Vincent Richard  <vincent@vincent-richard.net>
+
  * utility/md5.cpp: fixed forward use of swapUint32Array() with
    gcc 3.3 (Apple).
 
